<resources>
    <string name="app_name">Plank Hero</string>
    <string name="best_record">Best Record \n 58\'\'</string>
    <string name="my_goal">My Goal \n \n 1\'30\'\'</string>
    <string name="total_time">Total Time \n 3\'28\'\'</string>
    <string name="exercise_mode">EXERCISE MODE</string>
    <string name="send_challenge">SEND PLANK \n CHALLENGE</string>
    <string name="plank_exercise">Plank Exercise</string>
    <string name="forearm_plank"> Forearm Plank\nBeginner</string>
    <string name="high_plank">High Plank\nIntermediate</string>
    <string name="chair_side_plank">Chair Side Plank\nAdvanced</string>
    <string name="set_timer">SET TIMER</string>
    <string name="forearm_tips">Tips: \n\nPlace your forearms on the ground with the elbows aligned below the shoulders, and arms parallel to the body at about shoulder-width distance.\n \nGround the toes into the floor and squeeze the glutes to stabilize the body.\n\nBreath naturally and make sure your head, shoulder, back, hip, and ankles are in line.</string>
    <string name="forearm_tips_title">Forearm Plank</string>
    <string name="title_activity_plank_content">plank_content</string>
    <string name="title_greeting">Hello Amber\n</string>
    <string name="profile">profile</string>
    <string name="forearm_tutor">Forearm Tutor</string>
    <string name="start_a_battle">START A BATTLE</string>
    <string name="no_ongoing_battle">No ongoing battle. \n Start one right now</string>
    <string name="battle_invite">BATTLE INVITE</string>
    <string name="combat_type">Combat Type</string>
    <string name="response_time">Response Time</string>
    <string name="choose_opponent">Choose Opponent:</string>
    <string name="select_all">Select All</string>
    <string name="ashley">Ashley</string>
    <string name="chooseImage">Choose Image</string>
    <string name="uploadImage">\t Upload Image</string>
    <string name="lowerMyHips">\t Lower my hips</string>
    <string name="PutForwardArms">\t Put forward my arms</string>
    <string name="StrengthenMyBack">\t Strengthen my back</string>
    <string name="LiftMyHips">\t Lift my hips</string>
    <string name="LowerMyHead">\t Lower my head</string>
    <string name="NextTime">\t Next time, remind me to: </string>
    <string name="Save_Change">Save Changes </string>

    <string name="SetReminder">Set a Reminder</string>
    <string name="close">Set a Reminder</string>

    <string name="userName">User Name</string>

    <string name="jeremy">Jeremy</string>
    <string name="daming">Daming</string>
    <string name="neha">Neha</string>
    <string name="publish_results">Publish Results: </string>
    <string name="your_mutual_friends_can_view">Your mutual friends can view the combat result </string>
    <string name="start_now">START NOW</string>
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="ranking">Ranking</string>
    <string name="challenge">Challenge</string>
    <string name="account">Account</string>
    <string name="plank_challenge">Plank Challenge</string>
    <string name="continue_without_an_account">continue without an account </string>
    <string name="upload_profile_pic">Upload/Take Profile Picture</string>
    <string name="create_a_profile">\t Create A Profile</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="next">Next</string>
    <string name="email_address">Email Address</string>
    <string name="nick_name">Nick Name</string>
    <string name="skip">SKIP</string>
    <string name="your_height">Your Height:</string>
    <string name="your_weight">Your Weight:</string>
    <string name="your_experience_with_plank">Your Experience with Plank:</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="to_measure_your_workout">To measure your workout result, please tell us: </string>
    <string name="login_with_fb">LOG IN WITH FACEBOOK</string>
    <string name="login_as_a_guest">LOG IN AS A GUEST</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="timer">Timer</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="free_mode">Free Mode</string>
    <string name="video_recording">VIDEO RECORDING</string>
    <string name="learn_your_device">Lean your device against a stable surface to record your workout. You can use the recording to adjust your workout.</string>
    <string name="enable_recording">ENABLE RECORDING</string>
    <string name="say_start">\t\t\t Voice Command: \n Say START, PAUSE, STOP \n \t \t \t to control the timer</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="pause">PAUSE</string>
    <string name="num1">01</string>
    <string name="num2">02</string>
    <string name="num3">03</string>
    <string name="num25">25</string>
    <string name="num30">30</string>
    <string name="num35">35</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settimer">settimer</string>
    <string name="logOut">Log Out</string>
    <string name="facebook_app_id">272923503609638</string>
    <string name="fb_login_protocol_scheme">fb272923503609638</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="quickStart">Reminder</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="privacy">Why We Collect Information From You: \n\nWe collect the information to provide you a better service. \n1. Provide our service. \n2. Maintain our service.\n3. Personalize service. \n\nWhat We Collect Information From You: \n1. Login information\n2. Physical data(height, weight)\n3. Recorded Video(default opt-out).\nfurther detail information please contact us </string>
    <string name="contact">Contact Info: \nEmail:yidingo@andrew.cmu.edu\nPhone:412-xxx-xxxx</string>

</resources>

