<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/pic1"
        android:layout_width="405dp"
        android:layout_height="156dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="288dp"
        android:layout_height="377dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic1">

        <CheckBox
            android:id="@+id/lowerHipC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="0dp"
            android:buttonTint="@android:color/white"
            android:text="@string/lowerMyHips"

            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/putForwardArmC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lowerHipC"
            android:layout_marginTop="0dp"
            android:buttonTint="@android:color/white"
            android:text="@string/PutForwardArms"

            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/strengthenBackC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/putForwardArmC"
            android:layout_marginTop="0dp"
            android:buttonTint="@android:color/white"

            android:text="@string/StrengthenMyBack"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/liftMyHipC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/strengthenBackC"
            android:layout_marginTop="0dp"
            android:buttonTint="@android:color/white"

            android:text="@string/LiftMyHips"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/lowerMyHeadC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/liftMyHipC"

            android:layout_marginTop="0dp"
            android:buttonTint="@android:color/white"

            android:text="@string/LowerMyHead"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="247dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-2dp"
            android:text="@string/NextTime"

            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveChange"
            android:layout_width="249dp"
            android:layout_height="32dp"
            android:layout_below="@+id/lowerMyHeadC"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="39dp"
            android:background="@color/colorGreen"
            android:text="@string/Save_Change"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>