<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorGreen"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorGreen"
        android:text="@string/logOut"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/next" />

    <TextView
        android:id="@+id/createAProfile"
        android:layout_width="185dp"
        android:layout_height="32dp"
        android:layout_marginStart="118dp"
        android:text="@string/create_a_profile"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/yourHeight"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/your_height"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputWeight"
        app:layout_constraintEnd_toStartOf="@+id/inputHeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourHeight2"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="8dp"
        android:text="@string/userName"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputHeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourWeight"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="15dp"
        android:text="@string/your_weight"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="200dp"
        android:layout_height="17dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="1dp"
        android:text="@string/your_experience_with_plank"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/experienceWithPlank"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Boy"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:text="@string/boy"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Girl"
        android:layout_width="67dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:text="@string/girl"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputName"
        app:layout_constraintStart_toEndOf="@+id/Male" />

    <TextView
        android:id="@+id/text"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_marginStart="90dp"
        android:text="@string/to_measure_your_workout"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/Male"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user_profile" />

    <RadioButton
        android:id="@+id/Male"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/Girl"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/Female"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/colorGreen"
        app:layout_constraintBottom_toTopOf="@+id/Girl"
        app:layout_constraintStart_toEndOf="@+id/Male"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputHeight"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:textSize="8dp"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/inputWeight"
        app:layout_constraintStart_toEndOf="@+id/yourHeight" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="160dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="8dp"
        app:layout_constraintBottom_toTopOf="@+id/inputHeight"
        app:layout_constraintStart_toEndOf="@+id/yourHeight2" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="158dp"
        android:layout_height="34dp"

        android:layout_marginStart="4dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:textSize="8dp"
        android:ems="10"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/yourWeight" />

    <EditText
        android:id="@+id/experienceWithPlank"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="8dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/btnChoose"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/chooseImage"
        android:textColor="@android:color/white"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/uploadImage"

        android:textColor="@android:color/white"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
